fix header position and change scrollbar position

--- a/REACT/day7/rickandmorty/src/appstyles.scss
+++ b/REACT/day7/rickandmorty/src/appstyles.scss
@@ -109,10 +109,10 @@ body{
 
 .header {    
     padding: 1%;
-    position: sticky;
+    //position: sticky;
     top: 0;
-   // position:fixed;
-    // height: auto;
+    position:fixed;
+    height: 20%;
     width: 100%;
     text-align: center;
     background-color: $card-color;
@@ -181,17 +181,40 @@ body{
 
   }
 
-      
+  .App{
+    padding-top: 12%;
+    overflow-y: scroll;
+    scrollbar-width: 50% ;
+    scrollbar-color: gray;
+    //margin: 15% 0;
+    //overflow-y: auto;
 
+  }
+
+  .App {
+    background-color: #eee;
+    //width: 200px;
+    //height: 100px;
+    border: 1px dotted black;
+    overflow-y: scroll; /* Add the ability to scroll */
+    scrollbar-color: $but-back-color; 
+  }
+  
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  body::-webkit-scrollbar {
+      display: none;
+  
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 
 
   .row {
-    //margin: 15% 0;
-    ///overflow: visible;
-    //overflow-y: scroll;
-    //overflow-y: auto;
-
     .column {
         box-sizing: border-box;
         float: left;
